[gd_scene load_steps=2 format=3 uid="uid://dpx1hflwl42x8"]

[ext_resource type="Script" path="res://scripts/LineupEditor_simple.gd" id="1_9hfv6"]

[node name="LineupEditor" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_9hfv6")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.05, 0.05, 0.1, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0

[node name="TopPanel" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = Control.SIZE_SHRINK_CENTER

[node name="TitleLabel" type="Label" parent="VBoxContainer/TopPanel"]
layout_mode = 2
size_flags_horizontal = Control.SIZE_EXPAND_FILL
text = "EDITOR DE ALINEACIÃ“N - SIMPLE"
horizontal_alignment = 1

[node name="FormationSelector" type="OptionButton" parent="VBoxContainer/TopPanel"]
layout_mode = 2
custom_minimum_size = Vector2(250, 0)

[node name="SaveButton" type="Button" parent="VBoxContainer/TopPanel"]
layout_mode = 2
custom_minimum_size = Vector2(120, 40)
text = "GUARDAR"

[node name="BackButton" type="Button" parent="VBoxContainer/TopPanel"]
layout_mode = 2
custom_minimum_size = Vector2(100, 40)
text = "VOLVER"

[node name="MainContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = Control.SIZE_EXPAND_FILL

[node name="FieldContainer" type="VBoxContainer" parent="VBoxContainer/MainContainer"]
layout_mode = 2
size_flags_horizontal = Control.SIZE_EXPAND_FILL

[node name="FieldTitle" type="Label" parent="VBoxContainer/MainContainer/FieldContainer"]
layout_mode = 2
text = "CAMPO DE JUEGO"
horizontal_alignment = 1

[node name="Field" type="Control" parent="VBoxContainer/MainContainer/FieldContainer"]
layout_mode = 2
size_flags_vertical = Control.SIZE_EXPAND_FILL
custom_minimum_size = Vector2(800, 600)

[node name="PlayersPanel" type="VBoxContainer" parent="VBoxContainer/MainContainer"]
layout_mode = 2
custom_minimum_size = Vector2(400, 0)

[node name="PlayersTitle" type="Label" parent="VBoxContainer/MainContainer/PlayersPanel"]
layout_mode = 2
text = "JUGADORES DISPONIBLES"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/MainContainer/PlayersPanel"]
layout_mode = 2
size_flags_vertical = Control.SIZE_EXPAND_FILL

[node name="PlayersContainer" type="VBoxContainer" parent="VBoxContainer/MainContainer/PlayersPanel/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = Control.SIZE_EXPAND_FILL
